# local-development

./: docker-compose.yml  pyproject.toml
src/: __main__.py
src/schema/: __init__.py  _common_schemas.py
src/utils/: secrets.py
